--- a/travel.html
+++ b/travel.html
@@ -57,8 +57,8 @@
 
         <!-- Entry: Mexico City & Guanajuato -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
-        <a href="travel/mexico-cdmx-guanajuato.html" class="block group">
-            <img src="assets/mexico-cdmx-guanajuato.jpg" alt="Mexico City and Guanajuato, Mexico" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+        <a href="travel/mexico.html" class="block group">
+            <img src="assets/travel/mexico/mexico-cover.jpeg" alt="Mexico City and Guanajuato, Mexico" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Mexico City & Guanajuato 🇲🇽</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -72,7 +72,7 @@
         <!-- Entry: Yellowstone National Park -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/yellowstone.html" class="block group">
-            <img src="assets/yellowstone.jpg" alt="Yellowstone National Park" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/yellowstone/yellowstone-cover.jpeg" alt="Yellowstone National Park" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Yellowstone National Park 🦬</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
@@ -86,7 +86,7 @@
         <!-- Entry: Disneyland on Fourth of July -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden">
         <a href="travel/disneyland-july4.html" class="block group">
-            <img src="assets/disneyland-july4.jpg" alt="Disneyland on Fourth of July" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
+            <img src="assets/travel/disneyland/disneyland-cover.jpeg" alt="Disneyland on Fourth of July" class="w-full h-64 object-cover group-hover:scale-105 transition-transform duration-300">
             <div class="p-6">
             <h2 class="text-2xl font-semibold mb-2">Disneyland — July 4th 🎆</h2>
             <p class="text-gray-600 dark:text-gray-300 mb-3">
