--- a/index.html
+++ b/index.html
@@ -13,16 +13,23 @@
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
+  <script src="https://kit.fontawesome.com/a2d9d6a0a0.js" crossorigin="anonymous"></script>
+
   <!-- Google Font: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&amp;display=swap" rel="stylesheet">
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="assets/style.css">
+
+  <script src="assets/script.js" defer></script>
+
+  <!-- YouTube IFrame API -->
+  <script src="https://www.youtube.com/iframe_api"></script>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/devicon.min.css">
+
 </head>
 
-<script src="assets/script.js" defer></script>
-</body>
-</html>
 
 <body class="bg-white text-gray-800 dark:bg-gray-900 dark:text-gray-100 font-montserrat transition-colors duration-300">
 
@@ -57,7 +64,7 @@
     <section id="about" class="py-20 px-4 max-w-4xl mx-auto">
       <h2 class="text-3xl font-semibold text-center mb-6">About Me</h2>
       <div class="flex flex-col md:flex-row items-center gap-8">
-        <img src="assets/grad.jpg" alt="Xuanyu Pan portrait" class="w-40 h-40 md:w-48 md:h-48 rounded-full shadow-lg">
+        <img src="assets/self.jpeg" alt="Xuanyu Pan portrait" class="w-40 h-40 md:w-48 md:h-48 rounded-full shadow-lg">
         <div>
           <p class="mb-4 text-gray-700 dark:text-gray-300">I’m a senior at USC majoring in Computer Science and Mathematics. My coursework and personal projects center on:</p>
           <ul class="list-disc list-inside space-y-2 text-gray-700 dark:text-gray-300">
@@ -78,6 +85,9 @@
     <!-- Projects Section -->
     <section id="projects" class="py-20 px-4 bg-gray-50 dark:bg-gray-900">
       <h2 class="text-3xl font-semibold text-center mb-12">Projects</h2>
+      <p class="text-center text-gray-600 dark:text-gray-400 mb-12">
+        Source codes and demos are available upon request — feel free to <a href="#contact" class="text-indigo-600 hover:underline">contact me</a>.
+      </p>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto">
         <!-- Card 1 -->
         <article class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg overflow-hidden group">
@@ -85,7 +95,6 @@
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">Events@USC</h3>
             <p class="text-gray-600 dark:text-gray-300 mb-4">Android event discovery app built with Java &amp; Kotlin, featuring real-time updates and interactive maps.</p>
-            <a href="https://github.com/xuanyupa/EventSC" target="_blank" class="btn-secondary">View Repo</a>
           </div>
         </article>
         <!-- Card 2 -->
@@ -94,7 +103,6 @@
           <div class="p-6">
             <h3 class="text-xl font-semibold mb-2">Minesweeper App</h3>
             <p class="text-gray-600 dark:text-gray-300 mb-4">Dynamic grid‐based game for Android implemented in Java, with custom difficulty levels and score tracking.</p>
-            <a href="https://github.com/xuanyupa/MinesweeperApp" target="_blank" class="btn-secondary">View Repo</a>
           </div>
         </article>
         <!-- Card: Beats4U -->
@@ -106,7 +114,6 @@
               Social music streaming platform built with <strong>React</strong> and <strong>Java Spring Boot</strong> that enables users to stream, share, and interact through playlists.
               Features include following users, liking playlists, and song recommendations for a connected music community.
             </p>
-            <a href="https://github.com/xuanyupa/Beats4U" target="_blank" class="btn-secondary">View Repo</a>
           </div>
         </article>
         <!-- Card: BookLoom -->
@@ -118,9 +125,6 @@
               AI-powered mobile reading app that lets users reimagine book stories by editing them in different styles
               while preserving the author's original voice.
             </p>
-            <div class="flex gap-3">
-              <a href="https://github.com/MarkFu0213/Bookloom" target="_blank" class="btn-secondary">View Repo</a>
-            </div>
           </div>
         </article>
       </div>
@@ -134,37 +138,63 @@
       <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-8">
         <!-- Programming Languages -->
         <div class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
-          <h3 class="text-xl font-semibold text-center mb-4 text-gray-800 dark:text-gray-100">Programming Languages</h3>
-          <ul class="flex flex-wrap justify-center gap-2 text-gray-700 dark:text-gray-300">
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Python</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Java</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">C</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">C++</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">C#</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">JavaScript / TypeScript</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Dart</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Swift</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">SQL</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">MATLAB</li>
-          </ul>
+          <h3 class="text-xl font-semibold text-center mb-4 text-gray-800 dark:text-gray-100">
+            Programming Languages
+          </h3>
+
+          <div class="flex flex-wrap justify-center gap-6 text-5xl text-gray-700 dark:text-gray-300">
+            <i class="devicon-python-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-java-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-c-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-cplusplus-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-csharp-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-javascript-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-typescript-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-dart-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-swift-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-mysql-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+            <i class="devicon-matlab-plain transform hover:scale-110 transition-transform duration-300"></i>
+          </div>
         </div>
+
 
         <!-- Frameworks & Tools -->
         <div class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
-          <h3 class="text-xl font-semibold text-center mb-4 text-gray-800 dark:text-gray-100">Frameworks &amp; Tools</h3>
-          <ul class="flex flex-wrap justify-center gap-2 text-gray-700 dark:text-gray-300">
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">React / React Native</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Flask</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Spring Boot</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Flutter</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">MongoDB</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">MySQL</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">AWS</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Docker</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Android Studio</li>
-            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Git / GitHub</li>
-          </ul>
+          <h3 class="text-xl font-semibold text-center mb-4 text-gray-800 dark:text-gray-100">Frameworks & Tools</h3>
+          <div class="flex flex-wrap justify-center gap-8 text-gray-700 dark:text-gray-300">
+            <div class="flex flex-col items-center">
+              <i class="devicon-react-original colored text-5xl"></i><span class="text-sm mt-2">React</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-flask-original colored text-5xl"></i><span class="text-sm mt-2">Flask</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-spring-original colored text-5xl"></i><span class="text-sm mt-2">Spring Boot</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-flutter-plain colored text-5xl"></i><span class="text-sm mt-2">Flutter</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-mongodb-plain colored text-5xl"></i><span class="text-sm mt-2">MongoDB</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-mysql-plain colored text-5xl"></i><span class="text-sm mt-2">MySQL</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-amazonwebservices-plain colored text-5xl"></i><span class="text-sm mt-2">AWS</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-docker-plain colored text-5xl"></i><span class="text-sm mt-2">Docker</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-androidstudio-plain colored text-5xl"></i><span class="text-sm mt-2">Android Studio</span>
+            </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-git-plain colored text-5xl"></i><span class="text-sm mt-2">Git / GitHub</span>
+            </div>
+          </div>
         </div>
+
 
         <!-- Core CS & Math -->
         <div class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
@@ -177,6 +207,7 @@
             <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Linear Algebra</li>
             <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Probability &amp; Statistics</li>
             <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Differential Equations</li>
+            <li class="px-3 py-1 bg-indigo-100 dark:bg-indigo-900 rounded-full">Numerical Methods</li>
           </ul>
         </div>
       </div>
@@ -288,20 +319,124 @@
     </section>
 
 
-    <!-- Contact Section -->
-    <section
-      id="contact"
-      class="py-20 px-6 bg-white dark:bg-gray-800"
-    >
-      <h2 class="text-3xl font-semibold text-center mb-6">Contact</h2>
+  <!-- Font Awesome for icons -->
+  <script src="https://kit.fontawesome.com/a2d9d6a0a0.js" crossorigin="anonymous"></script>
 
-      <div class="text-center">
-        <button
-          type="button"
-          onclick="window.location.href='mailto:xuanyupa@usc.edu'"
-          class="btn-primary inline-block px-6 py-3 rounded-full"
-        >
-          Ready to connect? Click me!
-        </button>
+
+  </main>
+
+    <!-- Music Control Button -->
+  <button id="music-btn"
+          class="fixed bottom-6 right-6 bg-indigo-600 text-white px-4 py-2 rounded-full shadow-lg hover:opacity-90">
+    🎵 Play Music
+  </button>
+
+  <!-- Hidden YouTube Player -->
+  <div id="yt-player" 
+       style="position:fixed;width:1px;height:1px;bottom:0;right:0;opacity:0;pointer-events:none;"></div>
+
+  <script>
+    let player = null;
+    let ready = false;
+    let playing = false;
+
+    // YouTube API callback must be global
+    function onYouTubeIframeAPIReady() {
+      // do nothing here; we'll lazy-create on first click
+      ready = true;
+    }
+
+    const btn = document.getElementById('music-btn');
+
+    function startFadeIn() {
+      player.setVolume(0);
+      player.playVideo();
+      playing = true;
+      btn.textContent = '⏸️ Pause Music';
+
+      let vol = 0, target = 20, step = 2;
+      const fade = setInterval(() => {
+        vol += step;
+        player.setVolume(vol);
+        if (vol >= target) clearInterval(fade);
+      }, 200);
+    }
+
+    btn.addEventListener('click', () => {
+      // If player hasn't been created yet, create it now (user gesture ensures playback is allowed)
+      if (!player) {
+        // If API not loaded yet, wait a tick
+        if (!window.YT || !YT.Player) {
+          // Try again shortly
+          setTimeout(() => btn.click(), 150);
+          return;
+        }
+        player = new YT.Player('yt-player', {
+          videoId: 'CV6dmNswqBQ',
+          playerVars: {
+            autoplay: 0,
+            controls: 0,
+            loop: 1,
+            playlist: 'CV6dmNswqBQ',
+            rel: 0,
+            modestbranding: 1
+          },
+          events: {
+            onReady: () => {
+              if (!playing) startFadeIn();
+            }
+          }
+        });
+        return; // onReady will handle playback
+      }
+
+      // Toggle play/pause for an existing player
+      if (!playing) {
+        startFadeIn();
+      } else {
+        player.pauseVideo();
+        playing = false;
+        btn.textContent = '🎵 Play Music';
+      }
+    });
+  </script>
+
+
+  <footer id="contact" class="bg-gray-100 dark:bg-gray-900 py-8 border-t border-gray-200 dark:border-gray-700">
+    <div class="max-w-6xl mx-auto text-center text-gray-700 dark:text-gray-300">
+      <p class="text-lg font-medium mb-4">Connect with me</p>
+
+      <div class="flex justify-center gap-6">
+        <!-- LinkedIn -->
+        <a href="https://www.linkedin.com/in/xuanyupan" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"
+          class="hover:text-indigo-600 transition-colors duration-200">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path d="M20.447 20.452h-3.554v-5.568c0-1.328-.027-3.036-1.85-3.036-1.853 0-2.136 1.447-2.136 2.942v5.662H9.353V9h3.414v1.561h.047c.476-.9 1.637-1.85 3.368-1.85 3.602 0 4.267 2.37 4.267 5.452v6.289zM5.337 7.433a2.062 2.062 0 1 1 0-4.124 2.062 2.062 0 0 1 0 4.124zM3.56 20.452h3.556V9H3.56v11.452z"/>
+          </svg>
+        </a>
+
+        <!-- GitHub -->
+        <a href="https://github.com/xuanyupa" target="_blank" rel="noopener noreferrer" aria-label="GitHub"
+          class="hover:text-indigo-600 transition-colors duration-200">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path d="M12 .5a12 12 0 0 0-3.792 23.4c.6.111.82-.261.82-.58 0-.287-.01-1.047-.016-2.055-3.338.726-4.042-1.61-4.042-1.61-.546-1.388-1.334-1.758-1.334-1.758-1.09-.744.083-.729.083-.729 1.205.085 1.84 1.238 1.84 1.238 1.07 1.833 2.807 1.304 3.49.997.108-.776.418-1.304.761-1.604-2.665-.304-5.466-1.332-5.466-5.927 0-1.31.469-2.381 1.237-3.221-.124-.304-.536-1.527.117-3.183 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 0 1 6.006 0c2.29-1.552 3.297-1.23 3.297-1.23.655 1.656.244 2.879.12 3.183.77.84 1.236 1.911 1.236 3.221 0 4.607-2.806 5.62-5.479 5.918.43.37.813 1.102.813 2.223 0 1.606-.015 2.9-.015 3.295 0 .321.218.696.826.578A12 12 0 0 0 12 .5z"/>
+          </svg>
+        </a>
+
+        <!-- Email -->
+        <a href="mailto:xuanyupa@usc.edu" aria-label="Email"
+          class="hover:text-indigo-600 transition-colors duration-200">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+            <path d="M20 4H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm0 4-8 5L4 8V6l8 5 8-5v2z"/>
+          </svg>
+        </a>
       </div>
-    </section>
+
+      <p class="mt-6 text-sm text-gray-500 dark:text-gray-400">
+        © 2025 Xuanyu Pan. All rights reserved.
+      </p>
+    </div>
+  </footer>
+
+
+</body>
