Add working experience

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <ul class="flex justify-center space-x-8 py-4 font-medium">
       <li><a href="#about" class="hover:text-indigo-600">About</a></li>
       <li><a href="#projects" class="hover:text-indigo-600">Projects</a></li>
+      <li><a href="#experience" class="hover:text-indigo-600">Experience</a></li>
       <li><a href="#skills" class="hover:text-indigo-600">Skills</a></li>
       <li><a href="#education" class="hover:text-indigo-600">Education</a></li>
       <li><a href="#academics" class="hover:text-indigo-600">Academics</a></li>
@@ -129,6 +130,57 @@
         </article>
       </div>
     </section>
+
+    <!-- Work Experience Section -->
+    <section id="experience" class="py-20 px-4 bg-white dark:bg-gray-800">
+      <h2 class="text-3xl font-semibold text-center mb-12">Work Experience</h2>
+
+      <div class="max-w-6xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+        <article class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
+          <h3 class="text-lg font-semibold">Research Assistant</h3>
+          <p class="text-gray-700 dark:text-gray-300">University of Southern California</p>
+          <p class="text-gray-500 dark:text-gray-400">May 2024 – Present • Los Angeles, CA</p>
+        </article>
+
+        <article class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
+          <h3 class="text-lg font-semibold">Machine Learning Intern</h3>
+          <p class="text-gray-700 dark:text-gray-300">AiFinSphere</p>
+          <p class="text-gray-500 dark:text-gray-400">Jul 2024 • New York, NY</p>
+        </article>
+
+        <article class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
+          <h3 class="text-lg font-semibold">Course Producer (CSCI 103/170/356)</h3>
+          <p class="text-gray-700 dark:text-gray-300">USC Viterbi</p>
+          <p class="text-gray-500 dark:text-gray-400">Aug 2023 – Dec 2024 • Los Angeles, CA</p>
+        </article>
+
+        <article class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
+          <h3 class="text-lg font-semibold">Mathematics Grader (Calculus III)</h3>
+          <p class="text-gray-700 dark:text-gray-300">USC Mathematics</p>
+          <p class="text-gray-500 dark:text-gray-400">Sep 2022 – May 2025 • Los Angeles, CA</p>
+        </article>
+
+        <article class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
+          <h3 class="text-lg font-semibold">Resident Advisor</h3>
+          <p class="text-gray-700 dark:text-gray-300">USC Housing</p>
+          <p class="text-gray-500 dark:text-gray-400">Aug 2022 – May 2023 • Los Angeles, CA</p>
+        </article>
+
+        <article class="bg-gray-50 dark:bg-gray-900 rounded-2xl shadow-lg p-6">
+          <h3 class="text-lg font-semibold">Software Engineer Intern</h3>
+          <p class="text-gray-700 dark:text-gray-300">Microsoft</p>
+          <p class="text-gray-500 dark:text-gray-400">Jun 2022 – Aug 2022 • Remote (China)</p>
+        </article>
+
+      </div>
+
+      <div class="mt-10 text-center">
+        <a href="experience.html" class="btn-primary inline-block">Explore Details →</a>
+      </div>
+    </section>
+
+
 
 
     <!-- Skills Section -->
