--- a/index.html
+++ b/index.html
@@ -65,7 +65,13 @@
     <section id="about" class="py-20 px-4 max-w-4xl mx-auto">
       <h2 class="text-3xl font-semibold text-center mb-6">About Me</h2>
       <div class="flex flex-col md:flex-row items-center gap-8">
-        <img src="assets/self.jpeg" alt="Xuanyu Pan portrait" class="w-40 h-40 md:w-48 md:h-48 rounded-full shadow-lg">
+        <img
+          src="assets/self.jpeg"
+          alt="Xuanyu Pan portrait"
+          class="w-28 h-28 sm:w-36 sm:h-36 md:w-44 md:h-44 lg:w-52 lg:h-52
+                rounded-full object-cover object-center shadow-lg"
+          width="208" height="208" loading="lazy" decoding="async">
+
         <div>
           <p class="mb-4 text-gray-700 dark:text-gray-300">I’m a senior at USC majoring in Computer Science and Mathematics. My coursework and personal projects center on:</p>
           <ul class="list-disc list-inside space-y-2 text-gray-700 dark:text-gray-300">
