--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
             <i class="devicon-typescript-plain colored transform hover:scale-110 transition-transform duration-300"></i>
             <i class="devicon-dart-plain colored transform hover:scale-110 transition-transform duration-300"></i>
             <i class="devicon-swift-plain colored transform hover:scale-110 transition-transform duration-300"></i>
+             <i class="devicon-rust-plain colored transform hover:scale-110 transition-transform duration-300" aria-label="Rust" title="Rust"></i>
             <i class="devicon-mysql-plain colored transform hover:scale-110 transition-transform duration-300"></i>
             <i class="devicon-matlab-plain transform hover:scale-110 transition-transform duration-300"></i>
           </div>
