--- a/experience.html
+++ b/experience.html
@@ -64,6 +64,11 @@
         <h3 class="text-xl font-semibold">Research Assistant — FLS Lab (Professor Ghandeharizadeh)</h3>
         <p class="text-gray-700 dark:text-gray-300">University of Southern California — Los Angeles, CA</p>
         <p class="text-gray-500 dark:text-gray-400 mb-4">August 2024 – May 2025</p>
+        <p class="text-gray-700 dark:text-gray-300 mt-[-0.25rem]">
+          <span class="font-semibold">NSF EAGER Project:</span>
+          “Prototyping Touch with FLS-Matter” — Award #2232382 (PI: Shahram Ghandeharizadeh; co-PI: Heather Culbertson)
+        </p>
+
         <ul class="list-disc list-inside space-y-1.5 text-gray-700 dark:text-gray-300">
             <li>Built end-to-end pipelines for <strong>drone obstacle detection</strong> and camera identification; evaluated error rates on <strong>Pi3 / Pi3W / Arducam</strong> across multiple marker sizes and distances.</li>
             <li>Standardized capture scripts (exposure/ISO presets, frame sampling, batch naming) and logging utilities, <strong>improving collection throughput by ~20%</strong>.</li>
