--- a/experience.html
+++ b/experience.html
@@ -30,17 +30,23 @@
 
   <main class="max-w-5xl mx-auto px-6 space-y-16 pb-20">
 
-    <!-- Research & Academic Experience -->
-    <section id="research-academic">
+    <!-- Research Experience -->
+    <section id="research-experience">
       <h2 class="text-2xl font-semibold mb-8 border-b border-gray-300 dark:border-gray-700 pb-2">
-        Research & Academic Experience
+        Research Experience
       </h2>
 
       <div class="space-y-8">
 
         <!-- Lattice Group -->
         <article id="lattice" class="bg-gray-50 dark:bg-gray-800 rounded-2xl shadow p-6">
-        <h3 class="text-xl font-semibold">Research Assistant — Lattice Group (Professor Zhang)</h3>
+        <h3 class="text-xl font-semibold">
+          Research Assistant —
+          <a href="https://viterbi-web.usc.edu/~cstheory/" target="_blank" class="text-indigo-600 hover:underline">
+            Lattice Group (Professor Jiapeng Zhang)
+          </a>
+        </h3>
+
         <p class="text-gray-700 dark:text-gray-300">University of Southern California — Los Angeles, CA</p>
         <p class="text-gray-500 dark:text-gray-400 mb-4">May 2025 – Present</p>
         <ul class="list-disc list-inside space-y-1.5 text-gray-700 dark:text-gray-300">
@@ -61,7 +67,12 @@
 
         <!-- FLS Lab -->
         <article id="fls" class="bg-gray-50 dark:bg-gray-800 rounded-2xl shadow p-6">
-        <h3 class="text-xl font-semibold">Research Assistant — FLS Lab (Professor Ghandeharizadeh)</h3>
+        <h3 class="text-xl font-semibold">
+          Research Assistant —
+          <a href="https://www.flslab.org/" target="_blank" class="text-indigo-600 hover:underline">
+            FLS Lab (Professor Shahram Ghandeharizadeh)
+          </a>
+        </h3>
         <p class="text-gray-700 dark:text-gray-300">University of Southern California — Los Angeles, CA</p>
         <p class="text-gray-500 dark:text-gray-400 mb-4">August 2024 – May 2025</p>
         <p class="text-gray-700 dark:text-gray-300 mt-[-0.25rem]">
@@ -87,7 +98,12 @@
 
         <!-- GLab -->
         <article id="glab" class="bg-gray-50 dark:bg-gray-800 rounded-2xl shadow p-6">
-        <h3 class="text-xl font-semibold">Research Assistant — GLab (Professor Goodney)</h3>
+        <h3 class="text-xl font-semibold">
+          Research Assistant —
+          <a href="https://usc-glab.github.io/website/" target="_blank" class="text-indigo-600 hover:underline">
+            GLab (Professor Andrew Goodney)
+          </a>
+        </h3>
         <p class="text-gray-700 dark:text-gray-300">University of Southern California — Los Angeles, CA</p>
         <p class="text-gray-500 dark:text-gray-400 mb-4">May 2024 – May 2025</p>
         <ul class="list-disc list-inside space-y-1.5 text-gray-700 dark:text-gray-300">
@@ -105,11 +121,25 @@
             <span class="px-2 py-1 rounded-full bg-indigo-100 dark:bg-indigo-900">Regression Testing</span>
         </div>
         </article>
+        </div>
+    </section>
 
+    <!-- Teaching & Academic Roles -->
+    <section id="teaching-academic">
+      <h2 class="text-2xl font-semibold mb-8 border-b border-gray-300 dark:border-gray-700 pb-2">
+        Teaching & Academic Roles
+      </h2>
+
+      <div class="space-y-8">
 
         <!-- Course Producer — CSCI 103 -->
         <article id="cp-103" class="bg-gray-50 dark:bg-gray-800 rounded-2xl shadow p-6">
-        <h3 class="text-xl font-semibold">Course Producer — CSCI-103: Introduction to Programming</h3>
+        <h3 class="text-xl font-semibold">
+          Course Producer —
+          <a href="https://bytes.usc.edu/cs103/" target="_blank" class="text-indigo-600 hover:underline">
+            CSCI-103: Introduction to Programming
+          </a>
+        </h3>
         <p class="text-gray-700 dark:text-gray-300">USC Viterbi School of Engineering — Los Angeles, CA</p>
         <p class="text-gray-500 dark:text-gray-400 mb-4">Aug 2023 – Dec 2024</p>
 
@@ -157,7 +187,12 @@
 
         <!-- Course Producer — CSCI 356 -->
         <article id="cp-356" class="bg-gray-50 dark:bg-gray-800 rounded-2xl shadow p-6">
-        <h3 class="text-xl font-semibold">Course Producer — CSCI-356: Introduction to Computer Systems</h3>
+        <h3 class="text-xl font-semibold">
+          Course Producer —
+          <a href="https://usc-cs356.github.io/" target="_blank" class="text-indigo-600 hover:underline">
+            CSCI-356: Introduction to Computer Systems
+          </a>
+        </h3>
         <p class="text-gray-700 dark:text-gray-300">USC Viterbi School of Engineering — Los Angeles, CA</p>
         <p class="text-gray-500 dark:text-gray-400 mb-4">Aug 2023 – Dec 2024</p>
 
@@ -181,12 +216,12 @@
 
         <!-- Math Grader -->
         <article id="grader" class="bg-gray-50 dark:bg-gray-800 rounded-2xl shadow p-6">
-        <h3 class="text-xl font-semibold">Mathematics Grader — Calculus III for Engineers & Scientists</h3>
+        <h3 class="text-xl font-semibold">Mathematics Grader — Calculus III</h3>
         <p class="text-gray-700 dark:text-gray-300">USC Department of Mathematics — Los Angeles, CA</p>
         <p class="text-gray-500 dark:text-gray-400 mb-4">Sep 2022 – May 2025</p>
 
         <ul class="list-disc list-inside space-y-1.5 text-gray-700 dark:text-gray-300">
-            <li>Graded and provided detailed feedback for approximately <strong>300 students</strong> each term on multivariable and vector calculus assignments using <strong>Gradescope</strong> and <strong>Blackboard</strong>.</li>
+            <li>Graded and provided detailed feedback for approximately <strong>400 students</strong> on multivariable and vector calculus assignments using <strong>Gradescope</strong> and <strong>Blackboard</strong>.</li>
             <li>Ensured grading consistency by compiling and reporting <strong>statistical summaries</strong> (mean, median, and standard deviation) to assist instructors in normalization and curve adjustments.</li>
             <li>Helped students interpret and correct conceptual misunderstandings during <strong>office hours</strong>, explaining complex topics such as partial derivatives, double/triple integrals, and vector fields in geometric terms.</li>
             <li>Clarified applications of <strong>gradient, divergence, and curl</strong> with visual analogies and examples connecting calculus to engineering contexts (e.g., heat flow, fluid circulation, and electromagnetic fields).</li>
@@ -201,8 +236,6 @@
             <span class="px-2 py-1 rounded-full bg-indigo-100 dark:bg-indigo-900">Data Normalization</span>
         </div>
         </article>
-
-        
       </div>
     </section>
 
