--- a/index.html
+++ b/index.html
@@ -251,6 +251,10 @@
             <div class="flex flex-col items-center">
               <i class="devicon-git-plain colored text-5xl"></i><span class="text-sm mt-2">Git / GitHub</span>
             </div>
+            <div class="flex flex-col items-center">
+              <i class="devicon-pytorch-original colored text-5xl"></i>
+              <span class="text-sm mt-2">PyTorch</span>
+            </div>
           </div>
         </div>
 
